Coded By King Amda

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <title> Glassmorphism Calculator| CodingLab </title>
+    <title>  Calculator| King Amda </title>
     <link rel="stylesheet" href="style.css">
    </head>
 <body>
